--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
       <div class="hero-image">
         <!-- Decorative illustration representing electrical engineering -->
         <img src="hero.png" alt="Abstract representation of electronic circuits and signal processing">
+        <img src="profile.jpg" alt="Asaf Dabush" class="profile-pic">
+
       </div>
     </div>
   </header>
@@ -179,7 +181,7 @@
     <h2>Education</h2>
     <div class="education-item">
       <h3>B.Sc. Electrical &amp; Electronics Engineering (with honors)</h3>
-      <span class="timeline-period">Oct 2022 – Oct 2027 • Ariel University</span>
+      <span class="timeline-period">Oct 2022 – Oct 2026 • Ariel University</span>
       <p>GPA: 86/100</p>
       <p>
         Relevant coursework: Control Systems (100), Signals &amp; Systems (100), Random
