--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
         </div>
       </div>
       <div class="hero-image">
-        <!-- Decorative illustration representing electrical engineering -->
-        <img src="hero.png" alt="Abstract representation of electronic circuits and signal processing">
-        <img src="profile.jpg" alt="Asaf Dabush" class="profile-pic">
+  <img src="hero.png" alt="Abstract representation of electronic circuits and signal processing" class="hero-graphic">
+  <img src="profile.jpg" alt="Asaf Dabush" class="profile-pic">
+</div>
 
-      </div>
     </div>
   </header>
 
