--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h1>Asaf Dabush</h1>
         <p class="tagline">Electrical Engineering Student &amp; Hardware Designer</p>
         <p class="summary">
-          Third‑year Electrical &amp; Electronics Engineering student with a passion for
+          Fourth‑year Electrical &amp; Electronics Engineering student with a passion for
           digital hardware design, PCB layouts and real‑world lab work. Experienced in
           Verilog, MATLAB and signal validation, I enjoy tackling challenges that sit
           at the intersection of hardware and software.
