--- a/index.html
+++ b/index.html
@@ -109,6 +109,28 @@
   <section id="projects" class="section projects">
     <h2>Highlighted Projects</h2>
     <div class="projects-grid">
+      <div class="project-card">
+  <h3>Smart Soil Moisture Monitor (ESP32/ESP8266 + OLED)</h3>
+  <div class="project-period">2025</div>
+  <p>
+    Built an end-to-end IoT system for a houseplant using a capacitive soil moisture sensor and a 0.96&quot; SSD1306 OLED.
+    Implemented practical dry/wet calibration to convert ADC readings into moisture %, sample-averaging for stable measurements,
+    and threshold-based “Water me” alerts. Extended the system to a private Home Assistant cloud (VMware) with live dashboards
+    and automations.
+  </p>
+  <ul class="tech-list">
+    <li>ESP32 / ESP8266</li>
+    <li>Embedded C/C++ (Arduino)</li>
+    <li>ADC</li>
+    <li>I2C</li>
+    <li>SSD1306 OLED</li>
+    <li>Calibration</li>
+    <li>Home Assistant</li>
+    <li>VMware</li>
+    <li>IoT Automation</li>
+  </ul>
+</div>
+
       <!-- Manually curated projects from the resume -->
       <article class="project-card">
         <h3>Terahertz &amp; FTIR Characterization</h3>
