--- a/index.html
+++ b/index.html
@@ -110,8 +110,15 @@
     <h2>Highlighted Projects</h2>
     <div class="projects-grid">
       <div class="project-card">
+        
   <h3>Smart Soil Moisture Monitor (ESP32/ESP8266 + OLED)</h3>
+        <div class="project-images">
+  <img src="esp32_plant_setup.jpg" alt="ESP32 plant monitoring system setup">
+  <img src="esp32_plant_sensor.jpg" alt="Soil moisture sensor and ESP32 integration">
+</div>
+
   <div class="project-period">2025</div>
+        
   <p>
     Built an end-to-end IoT system for a houseplant using a capacitive soil moisture sensor and a 0.96&quot; SSD1306 OLED.
     Implemented practical dry/wet calibration to convert ADC readings into moisture %, sample-averaging for stable measurements,
