--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
         
   <h3>Smart Soil Moisture Monitor (ESP32/ESP8266 + OLED)</h3>
         <div class="project-images">
-  <img src="esp32_plant_setup.jpg" alt="ESP32 plant monitoring system setup">
-  <img src="esp32_plant_sensor.jpg" alt="Soil moisture sensor and ESP32 integration">
+  <img src="esp32_plant_setup.jpeg" alt="ESP32 plant monitoring system setup">
+  <img src="esp32_plant_sensor.jpeg" alt="Soil moisture sensor and ESP32 integration">
 </div>
 
   <div class="project-period">2025</div>
