--- a/index.html
+++ b/index.html
@@ -68,15 +68,23 @@
   <section id="skills" class="section skills">
     <h2>Skills</h2>
     <div class="skill-cards">
-      <div class="skill-card">
-        <h3><i class="fa fa-microchip"></i> Hardware Design</h3>
-        <ul>
-          <li>Verilog &amp; digital logic</li>
-          <li>PCB layout (KiCad)</li>
-          <li>Hardware debugging</li>
-          <li>Digital circuit design</li>
-        </ul>
-      </div>
+    <div class="skill-card">
+  <h3>Hardware Design</h3>
+  <ul>
+    <li>Verilog & Digital Logic</li>
+    <li>Digital Circuit Design</li>
+    <li>PCB Layout (KiCad)</li>
+    <li>Hardware Debugging & Bring-up</li>
+  </ul>
+
+  <h4 class="skill-subtitle">Programming Languages</h4>
+  <ul>
+    <li>C / C++ (Embedded)</li>
+    <li>Verilog</li>
+    <li>Python</li>
+  </ul>
+</div>
+
       <div class="skill-card">
         <h3><i class="fa fa-desktop"></i> Simulation &amp; Tools</h3>
         <ul>
