Add Parkinson’s Disease EEG Analysis project entry to portfolio

--- a/index.html
+++ b/index.html
@@ -176,7 +176,27 @@
         </ul>
       </article>
     </div>
-    <!-- Dynamic GitHub projects will be inserted here -->
+   
+      <article class="project-card">
+    <h3>Parkinson’s Disease EEG Analysis</h3>
+    <p class="project-period">2026</p>
+    <p>
+      Developed a comprehensive pipeline for processing resting-state EEG data to aid the diagnosis of Parkinson’s disease. Preprocessed raw EEG signals (resampling, filtering, artifact removal, FastICA), extracted features using higher-order statistics and other measures, and classified segments using SVM and bagged decision trees.
+    </p>
+    <ul class="tech-list">
+      <li>MATLAB</li>
+      <li>EEGLAB</li>
+      <li>ICA &amp; Higher-order statistics</li>
+      <li>Machine Learning (SVM &amp; Bagged Trees)</li>
+    </ul>
+    <p>
+      <a href="Bio_medical_summery.pdf" target="_blank">Project Summary (PDF)</a> |
+      <a href="preprocessing_paper_faithful.m" target="_blank">Preprocessing Code</a> |
+      <a href="PD_HOS_Full_Extract_PaperFaithful_IC_NO_APPROX.m" target="_blank">Feature Extraction Code</a> |
+      <a href="segment_level_kfold.m" target="_blank">ML Script</a>
+    </p>
+  </article>
+<!-- Dynamic GitHub projects will be inserted here -->
     <h3 class="subheading">Recent GitHub Activity</h3>
     <div id="github-projects" class="projects-grid"></div>
   </section>
