Add ROC images to Parkinson project and remove fill section

--- a/index.html
+++ b/index.html
@@ -189,19 +189,22 @@
       <li>ICA &amp; Higher-order statistics</li>
       <li>Machine Learning (SVM &amp; Bagged Trees)</li>
     </ul>
+            <div class="roc-images">
+      <img src="ROC_All.png" alt="ROC curve for all bands">
+      <img src="ROC_Alpha.png" alt="ROC curve for alpha band">
+      <img src="ROC_Beta.png" alt="ROC curve for beta band">
+    >
     <p>
       <a href="Bio_medical_summery.pdf" target="_blank">Project Summary (PDF)</a> |
       <a href="preprocessing_paper_faithful.m" target="_blank">Preprocessing Code</a> |
       <a href="PD_HOS_Full_Extract_PaperFaithful_IC_NO_APPROX.m" target="_blank">Feature Extraction Code</a> |
       <a href="segment_level_kfold.m" target="_blank">ML Script</a>
     </p>
-  </article>
-<!-- Dynamic GitHub projects will be inserted here -->
-    <h3 class="subheading">Recent GitHub Activity</h3>
-    <div id="github-projects" class="projects-grid"></div>
-  </section>
-
-  <!-- Experience Section -->
+  
+<!--Dyamic GitHub projects will be inserted here -->
+    <-- <h3 class="subheading">Recent GitHub Activity</h3> -->
+<!--     <div id="github-projects" class="projects-grid"></div> -->
+  </!-- Experience Section -->
   <section id="experience" class="section experience">
     <h2>Experience</h2>
     <div class="timeline">
