--- a/index.html
+++ b/index.html
@@ -189,12 +189,21 @@
       <li>ICA &amp; Higher-order statistics</li>
       <li>Machine Learning (SVM &amp; Bagged Trees)</li>
     </ul>
-         <div class="roc-images">
-  <img src="ROC_All.png"   alt="ROC curve for all bands">
-  <img src="ROC_Alpha.png" alt="ROC curve for alpha band">
-  <img src="ROC_Beta.png"  alt="ROC curve for beta band">
+  <div class="roc-images">
+  <figure>
+    <img src="ROC_All.png">
+    <figcaption>All Bands</figcaption>
+  </figure>
+  <figure>
+    <img src="ROC_Alpha.png">
+    <figcaption>Alpha Band</figcaption>
+  </figure>
+  <figure>
+    <img src="ROC_Beta.png">
+    <figcaption>Beta Band</figcaption>
+  </figure>
 </div>
-
+>
     <p>
       <a href="Bio_medical_summery.pdf" target="_blank">Project Summary (PDF)</a> |
       <a href="preprocessing_paper_faithful.m" target="_blank">Preprocessing Code</a> |
